# vicinal-the-ai-guardian

./: Makefile  README.md
core/context/: __init__.py  context_builder.py
core/decisions/: __init__.py  decision_maker.py
core/errors/: __init__.py  exceptions.py
core/types/: __init__.py  prompt.py  safety_score.py  verdict.py
data/: build_index.py  metadata.json  threat_patterns.jsonl
engine/: __init__.py  engine.py
engine/evaluators/: embedding_evaluator.py  faiss_evaluator.py  ocr_evaluator.py  rag_evaluator.py
engine/pre_call/: context_driven.py  zero_resource.py
policies/base/: default.yaml
research/baselines/: base_evaluator.py  keyword_baseline.py  vicinal_baseline.py
research/experiments/: run_experiment.py
research/metrics/: evaluator.py
sdk/python/: pyproject.toml
sdk/python/vicinal/: __init__.py  config.py  exceptions.py  guard.py  verdicts.py
sdk/python/vicinal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
webapp/backend/: main.py  requirements.txt
webapp/backend/routes/: chat.py  guard.py
webapp/frontend/: index.html  package.json
webapp/frontend/src/: App.jsx
webapp/frontend/src/styles/: global.css
